deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soft-arch-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: soft-arch-app
  template:
    metadata:
      labels:
        app: soft-arch-app
    spec:
      containers:
        - name: soft-arch
          image: skyrex/soft-architect:v2.1
          ports:
            - name: web
              containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
