deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soft-arch-service
spec:
  selector:
    app: soft-arch-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
